# car_rental_api

./: .gitignore  README.md  pyproject.toml
data/: data.json  data_original.json
src/: exceptions.py  main.py  models.py  routes.py  storage.py  utils.py
tests/: test_get_available_cars.py  test_main.py  test_post_booking.py
